Refactor: Repurpose KnobPercussionMode to KnobpreOnTime for preOnTime control
- Rename KnobPercussionMode to KnobpreOnTime in node_2d.tscn
- Add Globalv.pre_on_time variable (default: 5000.0 ms)
- Implement knob control for preOnTime (100 units per step)
- Restrict preOnTime changes when SMF file is loaded
- Update GDSynthesizer to use Globalv.pre_on_time
- Add update_piano_roll_pre_on_time() in FrontCase.gd
- Add _update_pre_on_time() in PianoRollOverlay.gd
- Implement preOnTime change detection in PianoRollOverlay._process()
- Recalculate existing note heights when preOnTime changes
- Update comments to English
- Remove debug logs
- Add temporary file patterns to .gitignore
- Remove temporary files from git tracking

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,8 @@ godot_project/export_presets.cfg
 # Imported translations (automatically generated from CSV files)
 godot_project/*.translation
 
+# Temporary files
+*.tmp
+~*.TMP
+*.TMP
+
